--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "apiGatewayAddress": "0.0.0.0:80",
-  "userManagementAddress": "http://user-management-lb-684463008.eu-central-1.elb.amazonaws.com/user_management/api/v1.0/",
-  "courseManagementAddress": "http://course-management-lb-128389604.eu-central-1.elb.amazonaws.com/course_management/api/v1.0/",
+  "userManagementAddress": "http://localhost:5000/user_management/api/v1.0/",
+  "courseManagementAddress": "http://localhost:5001/course_management/api/v1.0/",
   "teachingMaterialManagementAddress": "http://teaching-material-management-lb-1327224860.eu-central-1.elb.amazonaws.com/teaching_material_management/api/v1.0/",
   "tokenPrivateKey": "kjsdksjndg0124"
 }
